[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/UI/progress_bars/progress_bar_player_overlay.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemy/Enemy_AI_w.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/progress_bars/progress_bar_player.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=29]
extents = Vector3( 0.616, 1.04847, 0.665 )

[sub_resource type="SpatialMaterial" id=32]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=24]
material = SubResource( 32 )
size = Vector3( 1, 1, 2 )

[sub_resource type="SpatialMaterial" id=33]

[sub_resource type="CubeMesh" id=26]
material = SubResource( 33 )
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=34]
uv1_scale = Vector3( 1.694, 1.292, -6.346 )
uv1_offset = Vector3( -0.914, 0.159, 0 )

[sub_resource type="CubeMesh" id=27]
material = SubResource( 34 )
size = Vector3( 0.544, 0.732, 0.516 )

[sub_resource type="SphereShape" id=28]
radius = 6.0

[sub_resource type="SphereShape" id=30]
radius = 8.0

[sub_resource type="ViewportTexture" id=31]
viewport_path = NodePath("Spatial/Viewport")

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00105, -0.0290379 )
shape = SubResource( 29 )

[node name="Enemy" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Model" type="Spatial" parent="Enemy"]

[node name="Body" type="MeshInstance" parent="Enemy/Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 24 )
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance" parent="Enemy/Model/Body"]
transform = Transform( 0.866025, -2.18557e-08, 0.5, -0.353553, 0.707107, 0.612372, -0.353553, -0.707107, 0.612372, 0, -0.503, -0.32 )
mesh = SubResource( 26 )

[node name="HeadBand" type="MeshInstance" parent="Enemy/Model/Body"]
transform = Transform( 1, 2.4869e-14, 0, 0, 3.77491e-08, 1, 1.06581e-14, -0.5, -1.03316e-07, 0, -0.503, -0.299 )
mesh = SubResource( 27 )

[node name="NavigationAgent" type="NavigationAgent" parent="Enemy"]
target_desired_distance = 2.0
radius = 0.1
max_speed = 5.0

[node name="RayCast" type="RayCast" parent="Enemy"]
enabled = true
cast_to = Vector3( 0, 0, -80 )
collision_mask = 3

[node name="Sight" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Sight"]
shape = SubResource( 28 )

[node name="Alert" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Alert"]
shape = SubResource( 30 )

[node name="Eyes" type="Spatial" parent="Enemy"]

[node name="StopLooking" type="Timer" parent="Enemy"]
wait_time = 5.0

[node name="Attack" type="Timer" parent="Enemy"]
wait_time = 0.5

[node name="Move" type="Timer" parent="Enemy"]
process_mode = 0
wait_time = 0.013
autostart = true

[node name="Move_no_plyr" type="Timer" parent="Enemy"]
process_mode = 0
wait_time = 10.0
autostart = true

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.409191, -0.498351, 0 )

[node name="Viewport" type="Viewport" parent="Spatial"]
size = Vector2( 197, 197 )
size_override_stretch = true
own_world = true
transparent_bg = true

[node name="CanvasLayer" type="CanvasLayer" parent="Spatial/Viewport"]

[node name="Control" type="Control" parent="Spatial/Viewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP_bar" type="TextureProgress" parent="Spatial/Viewport/CanvasLayer/Control"]
anchor_right = 0.225
anchor_bottom = 0.05
margin_right = 105.675
margin_bottom = 15.409
value = 93.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )
tint_over = Color( 0.223529, 0, 0, 1 )
tint_progress = Color( 0.780392, 0.101961, 0.101961, 1 )
nine_patch_stretch = true

[node name="HP_display" type="Sprite3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145591, 1.12578, 0 )
flip_h = true
flip_v = true
modulate = Color( 1, 1, 1, 0.643137 )
pixel_size = 0.0106
billboard = 1
texture = SubResource( 31 )

[node name="VisibilityEnabler" type="VisibilityEnabler" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.124, 0, 0 )
aabb = AABB( -1, -1, -1, 1.669, 3.316, 2 )

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="velocity_computed" from="Enemy/NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="body_entered" from="Enemy/Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Enemy/Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="Enemy/Alert" to="." method="_on_Alert_body_entered"]
[connection signal="timeout" from="Enemy/StopLooking" to="." method="_on_StopLooking_timeout"]
[connection signal="timeout" from="Enemy/Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="Enemy/Move" to="." method="_on_Move_timeout"]
[connection signal="timeout" from="Enemy/Move_no_plyr" to="." method="_on_Move_no_plyr_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
