[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/textures/enemy_2d/power_station_enemyv2.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemy/Enemy_AI_w.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/progress_bars/progress_bar_player_overlay.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/progress_bars/progress_bar_player.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sound/damage_generic_humanoid.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/defense_broken.ogg" type="AudioStream" id=6]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[sub_resource type="SphereShape" id=7]
radius = 6.0

[sub_resource type="SphereShape" id=8]
radius = 8.0

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1.606, 0.22, 1.456 )

[node name="Prower" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 2 )
Health = 200
defHealth = 200
defense = 2
can_be_stunned = false
freeroam = true
type = "mshooter"
can_go_into_cover = false
angered_alert = true

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 0.99889, 0, -0.0471065, 0, 1, 0, 0.0471065, 0, 0.99889, -0.0073015, 2, 0.154828 )

[node name="Enemy" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Model" type="Spatial" parent="Enemy"]
transform = Transform( 145, 0, 0, 0, 145, 0, 0, 0, 145, 0, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Enemy/Model"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.00910345, 0 )
pixel_size = 0.0001
shaded = true
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy/Model"]

[node name="HP_display" type="Sprite3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394, 2, -0.113 )
flip_h = true
flip_v = true
modulate = Color( 1, 1, 1, 0.643137 )
pixel_size = 0.0106
texture = SubResource( 6 )
__meta__ = {
"_editor_description_": "billboard on is unneccessary (is that how you spell it?), the enemy looks at you always."
}

[node name="NavigationAgent" type="NavigationAgent" parent="Enemy"]
target_desired_distance = 2.0
radius = 0.1
max_speed = 2.35

[node name="RayCast" type="RayCast" parent="Enemy"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.039, 1.498, 0 )
enabled = true
cast_to = Vector3( 0, 0, -80 )
collision_mask = 3

[node name="Sight" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Sight"]
shape = SubResource( 7 )

[node name="Alert" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/Alert"]
shape = SubResource( 8 )

[node name="StopLooking" type="Timer" parent="Enemy"]
wait_time = 5.0

[node name="Attack" type="Timer" parent="Enemy"]
wait_time = 0.5

[node name="Move" type="Timer" parent="Enemy"]
process_mode = 0
wait_time = 0.013
autostart = true

[node name="Move_no_plyr" type="Timer" parent="Enemy"]
process_mode = 0
wait_time = 10.0
autostart = true

[node name="Update_Sights" type="Timer" parent="Enemy"]
wait_time = 0.5
autostart = true

[node name="Damage" type="AudioStreamPlayer3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27, 0 )
stream = ExtResource( 5 )
unit_size = 5.0
pitch_scale = 0.37
bus = "Sound"

[node name="DefBreak" type="AudioStreamPlayer3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27, 0 )
stream = ExtResource( 6 )
unit_size = 5.0
bus = "Sound"

[node name="VisibilityEnabler" type="VisibilityEnabler" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.523 )
aabb = AABB( -0.835, -1, -1, 1.669, 3.316, 0.796 )
pause_animations = false

[node name="StunnedTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.1, 1.369, 0 )
shape = SubResource( 9 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 197, 197 )
size_override_stretch = true
own_world = true
transparent_bg = true

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="Control" type="Control" parent="Viewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP_bar" type="TextureProgress" parent="Viewport/CanvasLayer/Control"]
anchor_right = 0.225
anchor_bottom = 0.05
margin_right = 105.675
margin_bottom = 15.409
value = 93.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_over = Color( 0.223529, 0, 0, 1 )
tint_progress = Color( 0.780392, 0.101961, 0.101961, 1 )
nine_patch_stretch = true

[connection signal="body_entered" from="Enemy/Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_entered" from="Enemy/Alert" to="." method="_on_Alert_body_entered"]
[connection signal="timeout" from="Enemy/StopLooking" to="." method="_on_StopLooking_timeout"]
[connection signal="timeout" from="Enemy/Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="Enemy/Move" to="." method="_on_Move_timeout"]
[connection signal="timeout" from="Enemy/Move_no_plyr" to="." method="_on_Move_no_plyr_timeout"]
[connection signal="timeout" from="Enemy/Update_Sights" to="." method="_on_Update_Sights_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
